create top side name and button group

--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-    <h1> </h1>
     <div class = 'margin'>
-            <yourname><strong>Chih-Chien(Justin) Lin</strong></yourname>
+        <a href='#' class="active"><strong>Chih-Chien(Justin) Lin</strong></a>
+        
+        <!-- here I create button group with the idea from w3school -->
+        <!-- https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_button_group -->
+        <div class ="button_group">
+            <button>Contact</button>
+            <button>Portfolio</button>
+            <button>About</button>
+        </div>
     </div>
-    <br>
     <hr>
 </body>
 </html>
