--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
-<body>
-    <div class = 'margin'>
+<body class='body'>
+    <div class = 'margin_top'>
         <a href='#' class="active"><strong>Chih-Chien(Justin) Lin</strong></a>
         
         <!-- here I create button group with the idea from w3school -->
@@ -16,6 +16,26 @@
             <button>About</button>
         </div>
     </div>
+    <!-- horizontal line below the name -->
     <hr>
+    <!-- <p class='cover'>     </p> -->
+    <div class ='background'>
+            <div class = 'margin'>
+                <h2 class='about'>About Me</h2>
+                <hr class='inner_line'>
+                <img class = 'photo' src="personal photo.JPG">
+                <p class='first_p'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam consequuntur ratione incidunt ducimus hic inventore, veritatis blanditiis iure perferendis aliquid facilis magnam suscipit eum labore dolore quibusdam cumque. Voluptas, sed.
+                </p>
+                <p class='second_p'>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed quam quaerat qui nihil velit quod minus quas molestiae laudantium vel non laboriosam unde fugiat eius molestias, exercitationem facere. Natus, nemo.
+                </p>
+                <br>
+                <p class='second_p'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, illum quas, nulla quaerat itaque placeat fugit maiores praesentium, provident architecto totam repellat deserunt et. Nisi obcaecati in dolorum mollitia quos.</p>
+            </div>
+    </div>
+    
+    <div>
+            <!-- create Footer -->
+            <p class = 'footer'> </p>
+    </div>
 </body>
 </html>
