change directory of photo to image

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class = 'margin'>
                 <h2 class='about'>About Me</h2>
                 <hr class='inner_line'>
-                <img class = 'photo' src="personal photo.JPG">
+                <img class = 'photo' src="assets/images/personal photo.JPG">
                 <p class='first_p'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam consequuntur ratione incidunt ducimus hic inventore, veritatis blanditiis iure perferendis aliquid facilis magnam suscipit eum labore dolore quibusdam cumque. Voluptas, sed.
                 </p>
                 <p class='second_p'>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed quam quaerat qui nihil velit quod minus quas molestiae laudantium vel non laboriosam unde fugiat eius molestias, exercitationem facere. Natus, nemo.
