fixed prob of protfolio, relative to photo

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,8 +24,14 @@
                 <hr class='inner_line'>
                 <img class = 'rocket' src='assets/images/rocket.jpg'>
                 <img class ='dish' src='assets/images/dish.JPG'>
-                <a class='rocket_position' href ="https://www.spacex.com/" target="_blank"> Rokcetry <a>
-                <a class='dish_position' href ="https://www.instagram.com/justin19930927/" target="_blank"> Dish </a>
+                <div class='rocket_position'>
+                    <a href ="https://www.spacex.com/" target="_blank" class='rocket_p'> Rokcetry <a>
+                </div>
+
+                <div class='dish_position'>
+                    <a href ="https://www.instagram.com/justin19930927/" target="_blank" class= 'dish_p'> Dish </a>
+                </div>
+                    <!-- <a class='dish_position' href ="https://www.instagram.com/justin19930927/" target="_blank"> Dish </a> -->
             </div>
     </div>
     
