chagne from button to link and add border

--- a/index_v1.html
+++ b/index_v1.html
@@ -6,23 +6,16 @@
 </head>
 <body class='body'>
     <div class = 'margin_top'>
-        <div class='margin_top_sec'>
-            <a href='index.html' class="active"><strong>Chih-Chien(Justin) Lin</strong></a>
-            <div class='position_adjust'>
-                <a href='contact.html' id="contact">Contact </a>
-                <a href='portfolio.html' id="portfolio">Portfolio </a>
-                <a href='index.html' id="about">About </a>
-            </div>
-        </div>
-    </div>
-        <!-- Another idea using button group with the idea from w3school -->
+        <a href='index.html' class="active"><strong>Chih-Chien(Justin) Lin</strong></a>
+        
+        <!-- here I create button group with the idea from w3school -->
         <!-- https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_button_group -->
-        <!-- <div class ="button_group">
+        <div class ="button_group">
             <button><a href="contact.html">Contact</a></button>
             <button><a href="portfolio.html">Portfolio</a></button>
             <button><a href="index.html">About</a></button>
-        </div> -->
-    
+        </div>
+    </div>
     <!-- horizontal line below the name -->
     <hr>
     <!-- <p class='cover'>     </p> -->
