--- a/index.html
+++ b/index.html
@@ -25,15 +25,14 @@
     
     <!-- horizontal line below the name -->
     <hr>
-    <!-- <p class='cover'>     </p> -->
     <div class ='background'>
             <div class = 'margin'>
                 <h2 class='about'>About Me</h2>
                 <hr class='inner_line'>
                 <img class = 'photo' src="assets/images/personal photo.JPG">
-                <p class='first_p'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam consequuntur ratione incidunt ducimus hic inventore, veritatis blanditiis iure perferendis aliquid facilis magnam suscipit eum labore dolore quibusdam cumque. Voluptas, sed.
+                <p class='first_p'> Hi everyone, I am Justin Lin from Taiwan, graduated from Boston University master of Science in Mechanical Engineering.
                 </p>
-                <p class='second_p'>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed quam quaerat qui nihil velit quod minus quas molestiae laudantium vel non laboriosam unde fugiat eius molestias, exercitationem facere. Natus, nemo.
+                <p class='second_p'>I have great interest in aerospace, cooking and anything new!! I have a record of gaining 35lbs in 6 months and back to original body weight in next 5 months, which happened in 2019. The next paragraph I will let Lorem to tell you something...
                 </p>
                 <br>
                 <p class='second_p'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, illum quas, nulla quaerat itaque placeat fugit maiores praesentium, provident architecto totam repellat deserunt et. Nisi obcaecati in dolorum mollitia quos.</p>
